# Coronal-Cloud-Media

./: .gitignore  .gitmodules  LICENSE  README.md
client/: coronalserver.cpp  signalingserver.cpp
meri/core/: controller.cpp  controller.h  coordinate.h  coronalserver.cpp  covertosdlkeymap.h  datamessage.cpp  datamessage.h  keyboardmessage.cpp  keyboardmessage.h  mediaservices.cpp  mediaservices.h  mousemessage.cpp  mousemessage.h  signalingserver.cpp  signalingserver.h
meri/core/common/: common.h  jsondata.cpp  jsondata.h  mericommon.h  module.h  modulevirtualinterface.h  singleton.h
meri/core/config/: config.cpp  config.h
meri/core/webrtc/: socketsignalingchannel.cpp  socketsignalingchannel.h  webrtcaudioinput.cpp  webrtcaudioinput.h  webrtcclient.cpp  webrtcclient.h  webrtccontroller.cpp  webrtccontroller.h  webrtcvideoinput.cpp  webrtcvideoinput.h
meri/docs/visio/: SW diagram.vsdx
meri/module/controller/: controllersdl.cpp
meri/module/media-services/: apimediaservices.cpp
meri/module/meri/: apimeri.cpp  meriserver.cpp  meriserver.h  sdlcontroller.cpp  sdlcontroller.h
meri/module/meri-test/: meritest.cpp
meri/module/server-webrtc/: serverwebrtc.cpp  serverwebrtc.h
meri/vs2019/: CMakeLists.txt
meri/vs2019/module-controller-sdl/: CMakeLists.txt
meri/vs2019/module-media-services/: CMakeLists.txt
meri/vs2019/module-meri/: CMakeLists.txt
meri/vs2019/module-test/: CMakeLists.txt
meri/vs2019/server-webrtc/: CMakeLists.txt
src/: coronalserver.cpp  coronalserver.h  signalingserver.cpp  signalingserver.h
src/common/: common.h  singleton.h
src/log/: consumers.cpp  consumers.h  etwcontrollers.cpp  etwcontrollers.h  etwproviders.cpp  etwproviders.h  loginterface.h
web/: main.py
web/html/: login.html
web/webserver/bean/: people.py
